--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Movies from Best to Worst</title>
 </head>
 <body>
+    <header>
 
+    </header>
 
+    <main>
+        <div class="wrapper">
+            <h1>Movies from Best to Worst</h1>
+            <div class="section">
+                <h2>Search for your favorite actor...</h2>
+                    <form id="search-form">
+                        <input type="text" name="search-bar" id="search-bar">
+                        <input type="submit" value="Search">
+                    </form>
+                <p id="error-message"></p>
+            </div>
+        </div>
+    </main>
+    
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>    
 <script src="index.js"></script>    
 </body>
