--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                         <input type="submit" value="Search">
                     </form>
                 <p id="error-message"></p>
+                <div class="actor-profile">
+                </div>
             </div>
         </div>
     </main>
