added new functions to display ordered results

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <div class="actor-profile">
                 </div>
             </div>
+            <div class="section">
+                <ul id="results">
+                </ul>
+            </div>
         </div>
     </main>
     
