added hidden footer and attribution logo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
             </div>
         </div>
     </main>
+
+    <footer class="hidden">
+        <div class="section">
+            <a href="https://www.themoviedb.org/" target="_blank">
+                <p>This product uses the TMDb API but is not endorsed or certified by TMDb.</p>
+                <img  id="logo" src="images/tmdb-logo.svg" alt="TMDb Logo">
+            </a>
+        </div>
+    </footer>
     
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>    
 <script src="index.js"></script>    
