--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="wrapper">
             <h1>Movies from Best to Worst</h1>
             <div class="section">
-                <h2>Search for your favorite actor.</h2>
+                <h2>Search for your favorite actor</h2>
                     <form id="search-form">
                         <input type="text" name="search-bar" id="search-bar">
                         <input type="submit" value="Search">
