--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <div class="wrapper">
-            <h1>Movies from Best to Worst</h1>
+            <h1>Movies from Best to Worst...</h1>
             <div class="section">
                 <h2>Search for your favorite actor</h2>
                     <form id="search-form">
