--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Movies from Best to Worst...</h1>
             <div class="section">
                 <h2>Search for your favorite actor</h2>
-                    <form id="search-form">
+                    <form id="search-form" autocomplete="on">
                         <input type="text" name="search-bar" id="search-bar">
                         <input type="submit" value="Search">
                     </form>
