image format issue fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div id="search-element" class="search-element">
                     <h2>Search for your favorite actor</h2>
                     <form id="search-form" autocomplete="on">
-                        <input type="text" name="search-bar" id="search-bar" autofocus>
+                        <input type="text" name="search-bar" id="search-bar">
                         <input type="submit" value="Search">
                     </form>
                 </div>
@@ -33,8 +33,8 @@
 
     <div id="header-placeholder" class="hidden"></div>
     
-    <main>
-        <div class="wrapper hidden">
+    <main class="hidden">
+        <div class="wrapper">
             <div class="section">
                 <ul id="results">
                 </ul>
