--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h2>Search for your favorite actor</h2>
                     <form id="search-form" autocomplete="on">
                         <input type="text" name="search-bar" id="search-bar">
-                        <input type="submit" value="Search">
+                        <input id="submit" type="submit" value="Search">
                     </form>
                 </div>
                 <p id="error-message"></p>
