--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Movies from Best to Worst...</h1>
             <div id="header-format" class="section">
                 <div id="search-element" class="search-element">
-                    <h2>Search for your favorite actor...</h2>
+                    <h2>Search for your favorite actor.</h2>
                     <form id="search-form" autocomplete="on">
                         <input type="text" name="search-bar" id="search-bar">
                         <input id="submit" type="submit" value="Search">
